<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/download_iv"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/download_image"
            android:src="@drawable/download_cloud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/downloadbles_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/download_iv">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/glide_download_but"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/RadioButtonStyle"
                android:text="@string/glide" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/loadapp_download_but"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/RadioButtonStyle"
                android:text="@string/loadapp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/retrofit_download_but"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/RadioButtonStyle"
                android:text="@string/retrofit" />
        </RadioGroup>

        <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:text="@string/button_download"
            app:buttonBackgroundColor="@color/colorPrimary"
            app:buttonBackgroundAnimColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


        <!--<com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:text="@string/button_download"
            app:layout_constraintStart_toStartOf="parent"
            app:buttonBackgroundColor="@color/colorPrimary"
            app:buttonBackgroundAnimColor="@color/colorPrimaryDark"
             />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>